tests/query_errors/scope_window_script4/error.txt
Error: 
    5 |   signed::min
      |   ^^^^^^^^^^^ The constant signed::min (absolute path) is not defined.